// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSearchSetup should set up header correctly 1`] = `
<Header
  icons={
    [
      {
        "color": "#9F8C82",
        "id": "xCircle",
        "onPress": [Function],
      },
    ]
  }
  title="P‑25"
/>
`;

exports[`useSearchSetup should show the sliders for sell offers 1`] = `
<Header
  icons={
    [
      {
        "color": "#F56522",
        "id": "percent",
        "onPress": [Function],
      },
      {
        "color": "#9F8C82",
        "id": "xCircle",
        "onPress": [Function],
      },
    ]
  }
  title="P‑25"
/>
`;
